@@ -17,8 +17,6 @@
 
 package org.apache.kafka.metadata.placement;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -30,8 +28,8 @@ import java.util.Objects;
 public class TopicAssignment {
     private final List<PartitionAssignment> assignments;
 
-    public TopicAssignment(final List<PartitionAssignment> assignments) {
-        this.assignments = Collections.unmodifiableList(new ArrayList<>(assignments));
+    public TopicAssignment(List<PartitionAssignment> assignments) {
+        this.assignments = List.copyOf(assignments);
     }
 
     /**
@@ -43,13 +41,19 @@ public class TopicAssignment {
 
     @Override
     public boolean equals(Object o) {
-        if (!(o instanceof TopicAssignment)) return false;
-        TopicAssignment other = (TopicAssignment) o;
+        if (!(o instanceof TopicAssignment other)) return false;
         return assignments.equals(other.assignments);
     }
 
     @Override
     public int hashCode() {
         return Objects.hash(assignments);
+    }
+
+    @Override
+    public String toString() {
+        return "TopicAssignment" +
+            "(assignments=" + assignments +
+            ")";
     }
 }
